[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daktari"
version = "0.0.253"
description = "Assist in setting up and maintaining developer environments"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Matt Russell", email = "matthew.russell@sonocent.com" }
]
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/sonocent/daktari"

[project.scripts]
daktari = "daktari.__main__:main"

[tool.setuptools]
license-files = ["LICENSE.txt"]

[tool.setuptools.packages.find]
where = ["."]
include = ["daktari"]

[tool.setuptools.package-data]
"daktari" = ["*"]  # Ensures package data is included

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 120
