[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daktari"
version = "0.0.273"
description = "Assist in setting up and maintaining developer environments"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Matt Russell", email = "matthew.russell@sonocent.com" }
]
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/sonocent/daktari"

[project.scripts]
daktari = "daktari.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["daktari", "daktari.checks"]

[tool.setuptools.package-data]
"daktari" = ["*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.black]
line-length = 120
